# fay

./: README.md  main.py  pyproject.toml
fay/: __main__.py  app.py  cli.py  env.py  media.py  models.py  ui.py
fay/backends/: __init__.py  base.py  feh.py  gnome.py  hyprpaper.py  registry.py  swaybg.py  swww.py
