[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fay"
version = "0.2.0"
description = "Raylib wallpaper carousel overlay with pluggable wallpaper backends"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "raylib==5.5.0.4",
]

[project.scripts]
fay = "fay.cli:main"

[tool.setuptools]
packages = ["fay", "fay.backends"]
